cabal-version:       3.0
name:                cabal-minimal
version:             0.0.0.0
synopsis:            Minimal cabal-only test project
description:
    Minimal cabal-only test project.
    See README.md for more details.
license:             NONE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2022 Kowainik
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.12.2

common common-options
  build-depends:       base ^>= 4.21.1.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4  && < 9.10)
    ghc-options:       -Wforall-identifier
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags
  if impl(ghc >= 9.8)
    ghc-options:       -Wterm-variable-capture
                       -Winconsistent-flags
  if impl(ghc >= 9.10)
    ghc-options:       -Wincomplete-record-selectors
                       -Wdeprecated-type-abstractions
                       -Wdata-kinds-tc
                       -Wdefaulted-exception-context
  if impl(ghc >= 9.12)
    ghc-options:       -Wview-pattern-signatures

  default-language:    Haskell2010

executable cabal-minimal
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
