cabal-version:       2.4
name:                full-batteries
version:             0.0.0.0
synopsis:            Full-featured test project
description:
    Full-featured test project.
    See [README.md](https://github.com/kowainik/full-batteries#full-batteries) for more details.
homepage:            https://github.com/kowainik/full-batteries
bug-reports:         https://github.com/kowainik/full-batteries/issues
license:             MIT
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            Testing
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/kowainik/full-batteries.git

common common-options
  build-depends:       base >= 4.9.1.0 && < 4.15
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wcompat
                       -Widentities

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       LambdaCase
                       OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     FullBatteries

executable full-batteries
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       full-batteries
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite full-batteries-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       full-batteries
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark full-batteries-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       full-batteries
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
