cabal-version:       2.4
name:                stack-full
version:             0.0.0.0
synopsis:            Stack-only example with all integrations
description:
    Stack-only example with all integrations.
    See [README.md](https://github.com/kowainik/stack-full#stack-full) for more details.
homepage:            https://github.com/kowainik/stack-full
bug-reports:         https://github.com/kowainik/stack-full/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            Testing
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3
                     GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/stack-full.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.15
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     StackFull

executable stack-full
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       stack-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite stack-full-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       stack-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark stack-full-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       stack-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
