cabal-version:       3.10.3.0
name:                stack-full
version:             0.0.0.0
synopsis:            Stack-only example with all integrations
description:
    Stack-only example with all integrations.
    See [README.md](https://github.com/kowainik/stack-full#stack-full) for more details.
homepage:            https://github.com/kowainik/stack-full
bug-reports:         https://github.com/kowainik/stack-full/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2022 Kowainik
category:            Testing
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.7
                     GHC == 9.0.2
                     GHC == 9.2.8
                     GHC == 9.4.8
                     GHC == 9.6.6
                     GHC == 9.8.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/stack-full.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.20
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4  && < 9.10)
    ghc-options:       -Wforall-identifier
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags
  if impl(ghc >= 9.8)
    ghc-options:       -Wterm-variable-capture
                       -Winconsistent-flags

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     StackFull

executable stack-full
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       stack-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite stack-full-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       stack-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark stack-full-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       stack-full
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
