cabal-version:       2.4
name:                smallProject
version:             0.0.0.0
synopsis:            Small test project
description:         Small test project
license:             NONE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018 Kowainik
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.2

common common-options
  build-depends:       base ^>= 4.13.0.0
                     

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable smallProject
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
